--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -270,10 +270,12 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                   <children>
-                    <RadioButton fx:id="DichotomyRadio" layoutX="59.0" layoutY="216.0" mnemonicParsing="false"
+                    <TextField fx:id="from" layoutX="120.0" layoutY="200.0" text="From" maxWidth="50"/>
+                    <TextField fx:id="to" layoutX="220.0" layoutY="200.0" text="To" maxWidth="50"/>
+                    <RadioButton fx:id="DichotomyRadio" layoutX="59.0" layoutY="230.0" mnemonicParsing="false"
                       text="Dichotomy method" toggleGroup="$method">
                     </RadioButton>
-                    <RadioButton fx:id="LiovaMethodRadio" layoutX="226.0" layoutY="216.0"
+                    <RadioButton fx:id="LiovaMethodRadio" layoutX="226.0" layoutY="230.0"
                       mnemonicParsing="false" text="Liova method" toggleGroup="$method">
                     </RadioButton>
                     <Label layoutX="133.0" layoutY="133.0" text="Enter functionExpression"/>
