--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -232,26 +232,22 @@
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                   <children>
-                    <TextField fx:id="from" layoutX="120.0" layoutY="200.0" text="From" maxWidth="50"/>
-                    <TextField fx:id="to" layoutX="220.0" layoutY="200.0" text="To" maxWidth="50"/>
-                    <RadioButton fx:id="DichotomyRadio" layoutX="59.0" layoutY="230.0" mnemonicParsing="false"
-                      text="Dichotomy method" toggleGroup="$method">
+                    <RadioButton fx:id="DichotomyRadio" layoutX="59.0" layoutY="230.0" mnemonicParsing="false" text="Dichotomy method" toggleGroup="$method">
                     </RadioButton>
-                    <RadioButton fx:id="LiovaMethodRadio" layoutX="226.0" layoutY="230.0"
-                      mnemonicParsing="false" text="Liova method" toggleGroup="$method">
+                    <RadioButton fx:id="LiovaMethodRadio" layoutX="226.0" layoutY="230.0" mnemonicParsing="false" text="Liova method" toggleGroup="$method">
 
                     </RadioButton>
                     <Label layoutX="133.0" layoutY="133.0" text="Enter functionExpression" />
                     <TextField fx:id="FunctionField" layoutX="47.0" layoutY="177.0" prefHeight="25.0" prefWidth="334.0" />
                     <Button fx:id="SolveButton" layoutX="61.0" layoutY="273.0" mnemonicParsing="false" onAction="#SolveEquationLab2" prefHeight="25.0" prefWidth="305.0" text="Solve" />
-                              <Label layoutX="135.0" layoutY="245.0" text="a">
+                              <Label layoutX="117.0" layoutY="202.0" text="a">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="222.0" layoutY="245.0" text="b" />
-                              <TextField fx:id="aFroLab2" layoutX="161.0" layoutY="241.0" prefHeight="25.0" prefWidth="45.0" />
-                              <TextField fx:id="bForLab2" layoutX="242.0" layoutY="241.0" prefHeight="25.0" prefWidth="44.0" />
+                              <Label layoutX="226.0" layoutY="204.0" text="b" />
+                              <TextField fx:id="aFroLab2" layoutX="133.0" layoutY="200.0" prefHeight="25.0" prefWidth="45.0" />
+                              <TextField fx:id="bForLab2" layoutX="251.0" layoutY="200.0" prefHeight="25.0" prefWidth="44.0" />
                   </children>
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
