--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -259,6 +259,44 @@
             </SplitPane>
           </content>
         </Tab>
+            <Tab text="Lab3">
+               <content>
+                  <SplitPane dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0">
+                     <items>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <TextField fx:id="lab3A11" layoutX="93.0" layoutY="134.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A12" layoutX="134.0" layoutY="134.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A13" layoutX="176.0" layoutY="134.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A21" layoutX="93.0" layoutY="169.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A22" layoutX="134.0" layoutY="169.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A23" layoutX="176.0" layoutY="169.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A31" layoutX="94.0" layoutY="207.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A32" layoutX="135.0" layoutY="207.0" prefHeight="25.0" prefWidth="29.0" />
+                              <TextField fx:id="lab3A33" layoutX="177.0" layoutY="207.0" prefHeight="25.0" prefWidth="29.0" />
+                              <Label layoutX="125.0" layoutY="101.0" text="matrix A">
+                                 <font>
+                                    <Font size="13.0" />
+                                 </font>
+                              </Label>
+                              <Button fx:id="lab3SolveButton" layoutX="123.0" layoutY="249.0" mnemonicParsing="false" onAction="#solveEquationLab3" text="Solve" />
+                              <RadioButton fx:id="lab3Mathod1" layoutX="25.0" layoutY="284.0" mnemonicParsing="false" text="Sobaka method">
+                                 <toggleGroup>
+                                    <ToggleGroup fx:id="method2" />
+                                 </toggleGroup>
+                              </RadioButton>
+                              <RadioButton fx:id="Lab3Mathod2" layoutX="177.0" layoutY="284.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="119.0" text="Faddeev-LeVerrier" toggleGroup="$method2" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <TextArea fx:id="lab3TextArea" prefHeight="548.0" prefWidth="398.0" promptText="Here will be your solution" />
+                           </children>
+                        </AnchorPane>
+                     </items>
+                  </SplitPane>
+               </content>
+            </Tab>
       </tabs>
     </TabPane>
     <MenuBar>
