--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -297,6 +297,83 @@
                   </SplitPane>
                </content>
             </Tab>
+            <Tab text="lab4">
+               <content>
+                  <SplitPane disable="true" dividerPositions="0.5" prefHeight="200.0" prefWidth="200.0">
+                     <items>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <TextField fx:id="lab4X1" layoutX="73.0" layoutY="29.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4X2" layoutX="111.0" layoutY="29.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4X3" layoutX="149.0" layoutY="29.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4X4" layoutX="187.0" layoutY="29.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4X5" layoutX="225.0" layoutY="29.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4Y1" layoutX="73.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4Y2" layoutX="111.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4Y3" layoutX="149.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4Y4" layoutX="187.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
+                              <TextField fx:id="lab4Y5" layoutX="225.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
+                              <Label layoutX="31.0" layoutY="33.0" text="X" />
+                              <Label layoutX="32.0" layoutY="58.0" text="Y" />
+                              <Button fx:id="lab4Solve" layoutX="142.0" layoutY="95.0" mnemonicParsing="false" text="Solve" />
+                              <Label layoutX="21.0" layoutY="132.0" text="i" />
+                              <Label layoutX="57.0" layoutY="132.0" text="xi" />
+                              <Label layoutX="102.0" layoutY="132.0" text="yi" />
+                              <TextField fx:id="lab4X1TextField" layoutX="42.0" layoutY="159.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Y1TextField" layoutX="83.0" layoutY="159.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_2Y1TextField" layoutX="162.0" layoutY="209.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_1Y1TextField" layoutX="123.0" layoutY="184.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_3Y1TextField" layoutX="199.0" layoutY="234.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_4Y1TextField" layoutX="238.0" layoutY="261.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4X2TextField" layoutX="43.0" layoutY="209.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Y2TextField" layoutX="84.0" layoutY="209.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4X3TextField" layoutX="42.0" layoutY="261.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Y3TextField" layoutX="83.0" layoutY="261.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_1Y2TextField" layoutX="123.0" layoutY="234.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_2Y2TextField" layoutX="162.0" layoutY="261.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_3Y2TextField" layoutX="199.0" layoutY="286.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4X4TextField" layoutX="44.0" layoutY="311.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Y4TextField" layoutX="85.0" layoutY="311.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_1Y3TextField" layoutX="123.0" layoutY="286.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_2Y3TextField" layoutX="162.0" layoutY="311.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4X5TextField" layoutX="44.0" layoutY="361.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Y5TextField" layoutX="85.0" layoutY="361.0" prefHeight="25.0" prefWidth="39.0" />
+                              <TextField fx:id="lab4Tria_1Y4TextField" layoutX="123.0" layoutY="336.0" prefHeight="25.0" prefWidth="39.0" />
+                              <Label layoutX="135.0" layoutY="132.0" text="y" />
+                              <Label layoutX="179.0" layoutY="132.0" text="y" />
+                              <Label layoutX="214.0" layoutY="132.0" prefHeight="17.0" prefWidth="22.0" text="y" />
+                              <Label layoutX="258.0" layoutY="132.0" prefHeight="17.0" prefWidth="22.0" text="y" />
+                              <Label layoutX="15.0" layoutY="163.0" text="-2" />
+                              <Label layoutX="17.0" layoutY="213.0" prefHeight="0.0" prefWidth="28.0" text="-1" />
+                              <Label layoutX="18.0" layoutY="265.0" prefHeight="0.0" prefWidth="28.0" text="0" />
+                              <Label layoutX="18.0" layoutY="315.0" prefHeight="0.0" prefWidth="28.0" text="1" />
+                              <Label layoutX="15.0" layoutY="365.0" prefHeight="0.0" prefWidth="28.0" text="2" />
+                              <Label layoutX="32.0" layoutY="443.0" text="P(x) =">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </Label>
+                              <Label layoutX="116.0" layoutY="448.0" text="X^3" />
+                              <Label layoutX="143.0" layoutY="448.0" text="+(" />
+                              <Label layoutX="192.0" layoutY="448.0" text=")X^2" />
+                              <TextField fx:id="lab4ResultCoefPower3" layoutX="77.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
+                              <TextField fx:id="lab4ResultCoefPower2" layoutX="157.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
+                              <Label layoutX="221.0" layoutY="448.0" text="+(" />
+                              <Label layoutX="270.0" layoutY="448.0" text=")X+(" />
+                              <TextField fx:id="lab4ResultCoefPower1" layoutX="235.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
+                              <Label layoutX="335.0" layoutY="448.0" text=")" />
+                              <TextField fx:id="lab4ResultCoefPower0" layoutX="298.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
+                           </children>
+                        </AnchorPane>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                           <children>
+                              <TextArea fx:id="lab4Textarea" layoutX="6.0" layoutY="9.0" prefHeight="532.0" prefWidth="373.0" promptText="thre will be your solution" />
+                           </children>
+                        </AnchorPane>
+                     </items>
+                  </SplitPane>
+               </content>
+            </Tab>
       </tabs>
     </TabPane>
     <MenuBar>
