--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -19,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
@@ -315,7 +315,7 @@
                               <TextField fx:id="lab4Y5" layoutX="225.0" layoutY="54.0" prefHeight="25.0" prefWidth="38.0" />
                               <Label layoutX="31.0" layoutY="33.0" text="X" />
                               <Label layoutX="32.0" layoutY="58.0" text="Y" />
-                              <Button fx:id="lab4Solve" layoutX="142.0" layoutY="95.0" mnemonicParsing="false" text="Solve" />
+                              <Button onAction = "#calculateInterpolationCoefficient" fx:id="lab4Solve" layoutX="142.0" layoutY="95.0" mnemonicParsing="false" text="Solve" />
                               <Label layoutX="21.0" layoutY="132.0" text="i" />
                               <Label layoutX="57.0" layoutY="132.0" text="xi" />
                               <Label layoutX="102.0" layoutY="132.0" text="yi" />
@@ -363,6 +363,8 @@
                               <TextField fx:id="lab4ResultCoefPower1" layoutX="235.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
                               <Label layoutX="335.0" layoutY="448.0" text=")" />
                               <TextField fx:id="lab4ResultCoefPower0" layoutX="298.0" layoutY="444.0" prefHeight="25.0" prefWidth="31.0" />
+                              <RadioButton layoutX="233.0" layoutY="95.0" mnemonicParsing="false" text="Newton" />
+                              <RadioButton layoutX="233.0" layoutY="112.0" mnemonicParsing="false" text="Gaussian" />
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
