Added to controller objects from GUI.

--- a/src/main/resources/sample/sample.fxml
+++ b/src/main/resources/sample/sample.fxml
@@ -380,20 +380,20 @@
                <content>
                   <AnchorPane prefHeight="200.0" prefWidth="200.0">
                      <children>
-                        <TextField id="y0TextField" layoutX="53.0" layoutY="43.0" prefHeight="26.0" prefWidth="61.0" />
-                        <TextField id="x0TextField" layoutX="166.0" layoutY="43.0" prefHeight="26.0" prefWidth="55.0" />
-                        <TextField id="hTextField" layoutX="278.0" layoutY="43.0" prefHeight="26.0" prefWidth="55.0" />
+                        <TextField fx:id="y0TextField" layoutX="53.0" layoutY="43.0" prefHeight="26.0" prefWidth="61.0" />
+                        <TextField fx:id="x0TextField" layoutX="166.0" layoutY="43.0" prefHeight="26.0" prefWidth="55.0" />
+                        <TextField fx:id="hTextField" layoutX="278.0" layoutY="43.0" prefHeight="26.0" prefWidth="55.0" />
                         <Label layoutX="14.0" layoutY="48.0" text="y0" />
                         <Label layoutX="142.0" layoutY="48.0" text="x0" />
                         <Label layoutX="242.0" layoutY="48.0" text="h" />
-                        <TextField id="textResultAreaLab5" layoutX="412.0" layoutY="1.0" prefHeight="417.0" prefWidth="365.0" />
-                        <Button id="solveDiffeerntialEquationButton" layoutX="142.0" layoutY="140.0" mnemonicParsing="false" text="solve" />
-                        <RadioButton id="picardRadioButton" layoutX="62.0" layoutY="103.0" mnemonicParsing="false" text="Picard">
+                        <TextField fx:id="textResultAreaLab5" layoutX="412.0" layoutY="1.0" prefHeight="417.0" prefWidth="365.0" />
+                        <Button fx:id="solveDiffeerntialEquationButton" onAction="#solveDifferentialEquation" layoutX="142.0" layoutY="140.0" mnemonicParsing="false" text="solve" />
+                        <RadioButton fx:id="picardRadioButton" layoutX="62.0" layoutY="103.0" mnemonicParsing="false" text="Picard">
                            <toggleGroup>
                               <ToggleGroup fx:id="lab5" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton id="adamsRadioButton" layoutX="204.0" layoutY="103.0" mnemonicParsing="false" text="Adams" toggleGroup="$lab5" />
+                        <RadioButton fx:id="adamsRadioButton" layoutX="204.0" layoutY="103.0" mnemonicParsing="false" text="Adams" toggleGroup="$lab5" />
                      </children>
                   </AnchorPane>
                </content></Tab>
